--- a/index.html
+++ b/index.html
@@ -30,41 +30,35 @@ button { padding: 8px 12px; cursor: pointer; }
 </div>
 
 <script>
-window.onload = function() {
-
-  function fizzBuzz(n) {
-    if (!Number.isInteger(n)  n < 1  n >= 100) return "Error: Enter number 1-99";
-    let output = [];
-    for (let i=1;i<=n;i++){
-      if(i%3===0 && i%5===0) output.push("FizzBuzz");
-      else if(i%3===0) output.push("Fizz");
-      else if(i%5===0) output.push("Buzz");
-      else output.push(i);
-    }
-    return output.join(", ");
+function fizzBuzz(n) {
+  if (!Number.isInteger(n)  n < 1  n >= 100) return "Error: Enter a number between 1 and 99";
+  let output = [];
+  for (let i = 1; i <= n; i++) {
+    if (i % 3 === 0 && i % 5 === 0) output.push("FizzBuzz");
+    else if (i % 3 === 0) output.push("Fizz");
+    else if (i % 5 === 0) output.push("Buzz");
+    else output.push(i);
   }
+  return output.join(", ");
+}
 
-  function letterCount(word) {
-    if (typeof word !== "string" || !/^[a-zA-Z]+$/.test(word))
-      return "Error: Enter a valid word with letters only";
-    let counts = {};
-    for (let letter of word.toLowerCase()) counts[letter] = (counts[letter] || 0) + 1;
-    return JSON.stringify(counts, null, 2);
-  }
+function letterCount(word) {
+  if (typeof word !== "string" || !/^[a-zA-Z]+$/.test(word))
+    return "Error: Enter letters only";
+  let counts = {};
+  for (let letter of word.toLowerCase()) counts[letter] = (counts[letter] || 0) + 1;
+  return JSON.stringify(counts, null, 2);
+}
 
-  document.getElementById("fizzBtn").addEventListener("click", function(){
-    const n = parseInt(document.getElementById("fizzInput").value);
-    const result = fizzBuzz(n);
-    document.getElementById("fizzOutput").textContent = result;
-  });
+document.getElementById("fizzBtn").addEventListener("click", function() {
+  const n = parseInt(document.getElementById("fizzInput").value);
+  document.getElementById("fizzOutput").textContent = fizzBuzz(n);
+});
 
-  document.getElementById("letterBtn").addEventListener("click", function(){
-    const word = document.getElementById("letterInput").value;
-    const result = letterCount(word);
-    document.getElementById("letterOutput").textContent = result;
-  });
-
-};
+document.getElementById("letterBtn").addEventListener("click", function() {
+  const word = document.getElementById("letterInput").value;
+  document.getElementById("letterOutput").textContent = letterCount(word);
+});
 </script>
 
 </body>
