--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ button { padding: 8px 12px; cursor: pointer; }
 
 <script>
 function fizzBuzz(n) {
-  if (!Number.isInteger(n)  n < 1  n >= 100) {
+  if (!Number.isInteger(n)|| n < 1||  n >= 100) {
     return "Error: Enter a number between 1 and 99";
   }
 
